--- a/RFPDAAPP/wms_erp/src/main/res/layout/app_bar_main.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.wms_erp.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_menu_send"
-
+        android:visibility="gone"
         />
 
 </android.support.design.widget.CoordinatorLayout>
