--- a/RFPDAAPP/wms_erp/src/main/res/layout/nav_header_main.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/nav_header_main.xml
@@ -16,9 +16,11 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/ic_account_24dp" />
+        android:src="@drawable/ic_account_24dp"
+        android:scaleType="centerCrop"/>
 
     <TextView
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -26,6 +28,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
+        android:layout_marginLeft="10dp"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
