--- a/RFPDAAPP/wms_erp/src/main/res/layout/on_offshelve_layout.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/on_offshelve_layout.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center_vertical"
-    android:background="#48464654"
+    android:background="#607D8B"
     android:padding="5dp"
 
     >
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:text="盲扫上架"
-        android:textColor="#666666"
+        android:textColor="#FFFFFF"
 
         />
 </LinearLayout>
