--- a/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
@@ -17,4 +17,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- 无阴影的button -->
+    <style name="MyButtonTheme" parent="Base.Widget.AppCompat.Button.Borderless">
+
+        <item name="android:background">@drawable/test</item>
+
+
+    </style>
+
 </resources>
