--- a/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
@@ -24,5 +24,14 @@
 
 
     </style>
-
+    <style name="dialog_tran" parent="android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:backgroundDimAmount">0.4</item>
+    </style>
 </resources>
