--- a/RFPDAAPP/wms_erp/src/main/res/layout/nav_header_main.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/nav_header_main.xml
@@ -20,16 +20,18 @@
         android:scaleType="centerCrop"/>
 
     <TextView
+        android:id="@+id/account_name"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="开发者"
+        android:text="梁同新"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
+
         android:layout_marginLeft="10dp"
-        android:id="@+id/textView"
+        android:id="@+id/version_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="V1.0（测试库）" />
