--- a/RFPDAAPP/wms_erp/src/main/res/layout/on_offshelve_layout.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/on_offshelve_layout.xml
@@ -41,4 +41,16 @@
         android:background="@null"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/onshelve_type"
+            android:spinnerMode="dropdown"
+            android:id="@+id/sp_reson"></Spinner>
+
+    </LinearLayout>
+
 </LinearLayout>
