--- a/RFPDAAPP/wms_erp/src/main/res/values-v21/styles.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values-v21/styles.xml
@@ -6,4 +6,11 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+    <style name="AppTheme.NoActionBar.MyTheme">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:statusBarColor">@color/statusbar_color</item>
+        <item name="android:windowTranslucentStatus">false</item>
+    </style>
 </resources>
