--- a/RFPDAAPP/wms_erp/src/main/res/values/colors.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="button_normal">#5692C4</color>
     <color name="button_pressed">#236090</color>
     <color name="white">#FFFFFF</color>
+    <color name="statusbar_color">#3CB371</color>
     <color name="gray_white">#DDDDDD</color>
 </resources>
