--- a/RFPDAAPP/wms_erp/src/main/res/layout/content_main.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/content_main.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="5dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.MainActivity"
     tools:showIn="@layout/app_bar_main"
@@ -15,11 +15,11 @@
     >
 
 
-    <android.support.v4.view.ViewPager
+    <com.example.wms_erp.view.NoScrollViewPager
         android:id="@+id/vp_functions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right|top">
 
-    </android.support.v4.view.ViewPager>
+    </com.example.wms_erp.view.NoScrollViewPager>
 </FrameLayout>
