--- a/RFPDAAPP/wms_erp/src/main/res/values/colors.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFF</color>
     <color name="statusbar_color">#3CB371</color>
     <color name="gray_white">#DDDDDD</color>
+    <color name="text_black">#444444</color>
+    <color name="text_gray">#888888</color>
+
 </resources>
