--- a/RFPDAAPP/wms_erp/src/main/res/layout/onshelve_dialog.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/onshelve_dialog.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    >
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择上架信息"
+        android:textColor="@color/text_black"
+        android:textSize="18sp"
+        android:layout_centerHorizontal="true"
+
+        />
+    <View
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#44999999"
+        />
 <LinearLayout
+    android:layout_marginTop="50dp"
     android:id="@+id/ll_reson"
-   android:layout_marginTop="150dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp"
+android:paddingBottom="5dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -15,7 +36,7 @@
     >
 
     <TextView
-
+            android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
@@ -24,23 +45,34 @@
 
         />
     <Spinner
-        android:layout_marginLeft="10dp"
+        android:id="@+id/sp_reason"
+        android:layout_marginLeft="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/onshelve_type"
         android:spinnerMode="dropdown"
+
         ></Spinner>
 </LinearLayout>
+    <View
+        android:layout_below="@id/ll_reson"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#44999999"
+        />
+
     <LinearLayout
+        android:id="@+id/ll_comimtinfo"
         android:layout_marginTop="10dp"
         android:gravity="center_vertical"
         android:layout_below="@id/ll_reson"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="大单位"
@@ -49,15 +81,17 @@
 
             />
         <com.example.wms_erp.view.ClearEditText
+            android:id="@+id/et_bigunit"
             android:layout_marginLeft="10dp"
-            android:layout_width="30dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:hint="0"
             android:background="@null"
+            android:maxLines="1"
             />
         <TextView
-            android:layout_marginLeft="10dp"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="小单位"
@@ -65,12 +99,33 @@
             android:textColor="@color/text_black"
             />
         <com.example.wms_erp.view.ClearEditText
+            android:id="@+id/et_smalluint"
             android:layout_marginLeft="10dp"
-            android:layout_width="30dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:hint="0"
             android:background="@null"
+            android:maxLines="1"
             />
     </LinearLayout>
+    <View
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/ll_comimtinfo"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#44999999"
+        />
+    <Button
+        android:id="@+id/btn_comit"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/ll_comimtinfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/MyButtonTheme"
+        android:text="提交上架"
+
+        />
 </RelativeLayout>
