--- a/RFPDAAPP/wms_erp/src/main/res/values/colors.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/colors.xml
@@ -11,5 +11,8 @@
     <color name="gray_white">#DDDDDD</color>
     <color name="text_black">#444444</color>
     <color name="text_gray">#888888</color>
-
+    <color name="black_de">#DE000000</color>
+    <color name="card_background">#ffffff</color>
+    <color name="card_shadow">#10000000</color>
+    <color name="window_background">#00000000</color>
 </resources>
