--- a/RFPDAAPP/wms_erp/src/main/res/menu/main.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/menu/main.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
+    >
+
     <item
+        android:icon="@drawable/order"
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
+
         android:id="@+id/action_settings2"
-        android:orderInCategory="100"
+        android:orderInCategory="110"
         android:title="设置"
         app:showAsAction="never"
 
