使用RxBus改造了条码的传递，避免了多层fragment传递条码的问题

--- a/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
@@ -51,4 +51,9 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@style/AnimationPicker</item>
     </style>
+    <style name="MyEditTextTheme" parent="Base.Widget.AppCompat.EditText">
+        <item name="android:maxLines">1</item>
+        <item name="android:background">@null</item>
+
+    </style>
 </resources>
