--- a/RFPDAAPP/wms_erp/src/main/res/layout/loccount_layout.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/loccount_layout.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/gray_white"
+    >
 <android.support.design.widget.TabLayout
     android:id="@+id/tab_title"
     android:layout_width="match_parent"
@@ -28,10 +30,13 @@
         />
 </android.support.design.widget.TabLayout>
     <com.example.wms_erp.view.NoScrollViewPager
+        android:layout_marginTop="5dp"
         android:id="@+id/vp_content"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        >
 
     </com.example.wms_erp.view.NoScrollViewPager>
 </LinearLayout>
