--- a/RFPDAAPP/wms_erp/src/main/res/layout/loctable_layout.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/loctable_layout.xml
@@ -15,7 +15,7 @@
         android:text="货位号"
             android:textSize="16sp"
         />
-    <com.example.wms_erp.view.ClearEditText
+    <EditText
         android:id="@+id/ce_huowei"
         android:maxLines="1"
         android:layout_marginLeft="9dp"
@@ -27,10 +27,11 @@
         android:layout_height="wrap_content"
         android:text="大"
         />
-    <com.example.wms_erp.view.ClearEditText
+    <EditText
         android:id="@+id/ce_bigunit"
         android:maxLines="1"
         android:layout_marginLeft="10dp"
+        android:inputType="numberDecimal"
         android:layout_width="40dp"
         android:layout_height="wrap_content" />
     <TextView
@@ -41,9 +42,10 @@
 
         />
 
-    <com.example.wms_erp.view.ClearEditText
+    <EditText
         android:id="@+id/ce_smallunit"
         android:maxLines="1"
+        android:inputType="numberDecimal"
         android:layout_marginLeft="9dp"
         android:layout_width="40dp"
         android:layout_height="wrap_content" />
@@ -61,7 +63,7 @@
             android:textSize="16sp"
             android:gravity="end"
             />
-        <com.example.wms_erp.view.ClearEditText
+        <EditText
             android:maxLines="1"
             android:id="@+id/ce_code"
             android:layout_marginLeft="9dp"
@@ -69,6 +71,7 @@
             android:layout_height="wrap_content" />
         <Button
             android:id="@+id/btn_zuofei"
+            android:textSize="14sp"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             style="@style/MyButtonTheme"
