--- a/RFPDAAPP/wms_erp/src/main/res/layout/loctable_layout.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/loctable_layout.xml
@@ -17,38 +17,12 @@
         />
     <EditText
         android:id="@+id/ce_huowei"
+        android:layout_marginRight="10dp"
         android:maxLines="1"
         android:layout_marginLeft="9dp"
-        android:layout_width="90dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="大"
-        />
-    <EditText
-        android:id="@+id/ce_bigunit"
-        android:maxLines="1"
-        android:layout_marginLeft="10dp"
-        android:inputType="numberDecimal"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="小"
 
-        />
-
-    <EditText
-        android:id="@+id/ce_smallunit"
-        android:maxLines="1"
-        android:inputType="numberDecimal"
-        android:layout_marginLeft="9dp"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content" />
 </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,13 +58,12 @@
         android:background="@color/text_gray"
         />
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:id="@+id/rv_datas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="LinearLayoutManager"
         app:reverseLayout="false"
-
         >
 
     </android.support.v7.widget.RecyclerView>
