--- a/RFPDAAPP/wms_erp/src/main/res/layout/item_locinfo.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/item_locinfo.xml
@@ -64,18 +64,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
+            android:textColor="@color/text_black"
             />
         <TextView
+
+            android:id="@+id/count_bigunit"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="大单位："
+            />
+
+        <TextView
+            android:id="@+id/count_smallunit"
             android:layout_marginLeft="9dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="大单位"
-            />
-        <TextView
-            android:layout_marginLeft="9dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="小单位"
+            android:text="小单位："
             />
 
     </LinearLayout>
