--- a/RFPDAAPP/wms_erp/src/main/res/layout/item_locinfo.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/item_locinfo.xml
@@ -16,16 +16,18 @@
             android:textSize="16sp"
             />
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="商品名"
             android:textSize="16sp"
+
             />
         <TextView
             android:layout_marginLeft="9dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/huowei"
+            android:textSize="16sp"
             />
     </LinearLayout>
     <LinearLayout
@@ -39,14 +41,23 @@
     android:layout_height="wrap_content"
     android:text="xxxxxx"
     android:textSize="12sp"
+    android:textColor="@color/text_black"
     />
         <TextView
             android:id="@+id/goodsName"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textSize="14sp"
+            android:textColor="@color/text_black"
             />
-
+<TextView
+    android:id="@+id/huowei_code"
+android:layout_marginLeft="9dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="14sp"
+    android:textColor="@color/text_black"
+    />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,7 +80,7 @@
         <TextView
 
             android:id="@+id/count_bigunit"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="大单位："
