--- a/RFPDAAPP/wms_erp/src/main/res/layout/onshelve_dialog.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/onshelve_dialog.xml
@@ -27,7 +27,7 @@
     android:id="@+id/ll_reson"
 android:paddingBottom="5dp"
     android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
+    android:layout_marginRight="30dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -36,6 +36,7 @@ android:paddingBottom="5dp"
     >
 
     <TextView
+        android:id="@+id/subtitle"
             android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,7 +51,7 @@ android:paddingBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="111111111"
-        android:textSize="15sp"
+        android:textSize="13sp"
         android:textColor="@color/text_gray"
 
         ></TextView>
