--- a/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/values/styles.xml
@@ -56,4 +56,12 @@
         <item name="android:background">@null</item>
 
     </style>
+    <style name="ContentTextStyle">
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="TitleTextStyle">
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
