--- a/RFPDAAPP/wms_erp/src/main/res/layout/goodsloacate_query_layout.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/goodsloacate_query_layout.xml
@@ -10,8 +10,10 @@
        android:textSize="16sp"
        android:textColor="@color/text_black"
        android:hint="扫描条码"
-       />
+       android:id="@+id/ce_code" />
 <android.support.v7.widget.RecyclerView
+    android:background="@color/white"
+    android:layout_marginTop="20dp"
     android:id="@+id/rv_locdetails"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
