--- a/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,10 @@
             android:id="@+id/nav_manage"
             android:icon="@drawable/trash_can"
             android:title="货位查询" />
+        <item
+            android:id="@+id/move_location"
+            android:icon="@drawable/ic_move"
+            android:title="货位搬移" />
     </group>
 
     <item android:title="设置">
