--- a/RFPDAAPP/wms_erp/src/main/res/layout/item_onshelve.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/item_onshelve.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
-
+android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -107,6 +107,7 @@
         >
 
         <TextView
+            android:id="@+id/title_spec"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -141,4 +142,5 @@
             android:textColor="@color/text_gray"
             />
     </LinearLayout>
+
 </LinearLayout>
