货位关联完成

--- a/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,11 @@
             android:id="@+id/move_location"
             android:icon="@drawable/ic_move"
             android:title="货位搬移" />
+        <item
+            android:id="@+id/nav_bindloc"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="货位关联"
+            />
     </group>
 
     <item android:title="设置">
