--- a/RFPDAAPP/wms_erp/src/main/res/layout/item_putdown_info.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/item_putdown_info.xml
@@ -9,8 +9,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
 
          >
 
@@ -36,7 +37,6 @@
             android:id="@+id/tv_goodsname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
 
             android:paddingLeft="5dp"
 
@@ -44,13 +44,18 @@
             android:textColor="#555555"
             android:textSize="14sp" />
     </LinearLayout>
+<View
+    android:layout_width="match_parent"
+    android:layout_height="0.5dp"
+    android:background="@color/black_de"
+    />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:orientation="horizontal"
-     
-        
+
+
          >
 
         <TextView
@@ -108,7 +113,9 @@
             android:paddingBottom="5dp"
             android:singleLine="true"
             android:textColor="#555555"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:background="@null"
+            />
 
         <View
             android:layout_width="0.5dp"
