--- a/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,11 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/cloud_upload"
-            android:title="盲扫上下架" />
+            android:title="盲扫上架" />
+        <item
+            android:id="@+id/nav_offshelve"
+            android:icon="@drawable/cloud_upload"
+            android:title="盲扫下架" />
 
         <item
             android:id="@+id/nav_slideshow"
@@ -14,7 +18,7 @@
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/order"
-            android:title="指令上下架" />
+            android:title="指令下架" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/trash_can"
