--- a/RFPDAAPP/wms_erp/src/main/res/layout/onshelve_dialog.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/onshelve_dialog.xml
@@ -56,18 +56,61 @@ android:paddingBottom="5dp"
 
         ></TextView>
 </LinearLayout>
+
     <View
         android:layout_below="@id/ll_reson"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#44999999"
         />
+    <LinearLayout
+        android:id="@+id/ll_kucun"
+        android:paddingBottom="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingTop="5dp"
 
+        android:layout_below="@+id/ll_reson"
+        android:layout_alignLeft="@+id/ll_reson"
+        android:layout_alignStart="@+id/ll_reson"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:id="@+id/subtitle2"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="商品库存:"
+            android:textColor="@color/text_black"
+
+            />
+        <TextView
+            android:id="@+id/content2"
+            android:layout_marginLeft="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="111111111"
+            android:textSize="13sp"
+            android:textColor="@color/text_gray"
+
+            ></TextView>
+    </LinearLayout>
+
+    <View
+        android:layout_below="@id/ll_kucun"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#44999999"
+        />
     <LinearLayout
         android:id="@+id/ll_comimtinfo"
         android:layout_marginTop="10dp"
         android:gravity="center_vertical"
-        android:layout_below="@id/ll_reson"
+        android:layout_below="@id/ll_kucun"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_width="match_parent"
@@ -81,7 +124,8 @@ android:paddingBottom="5dp"
             android:textSize="16sp"
             android:textColor="@color/text_black"
 
-            />
+            android:id="@+id/textView" />
+
         <com.example.wms_erp.view.ClearEditText
             android:id="@+id/et_bigunit"
             android:layout_marginLeft="10dp"
@@ -132,4 +176,6 @@ android:paddingBottom="5dp"
         android:text="确定参数"
 
         />
+
+
 </RelativeLayout>
