--- a/RFPDAAPP/wms_erp/src/main/res/layout/loctable_layout.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/layout/loctable_layout.xml
@@ -64,7 +64,7 @@
         android:layout_marginTop="5dp"
         android:id="@+id/rv_datas"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
         app:reverseLayout="false"
         >
