--- a/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,7 @@
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/file_text"
-            android:title="库存盘点" />
+            android:title="库存调整" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/order"
