--- a/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
+++ b/RFPDAAPP/wms_erp/src/main/res/menu/activity_main_drawer.xml
@@ -22,7 +22,7 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/trash_can"
-            android:title="货位查询" />
+            android:title="库存查询" />
         <item
             android:id="@+id/move_location"
             android:icon="@drawable/ic_move"
